# CALC-CamESP32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: BLE-ESPC6.cpp  CMakeLists.txt
main/include/: BLESerialization.h  GAP.h
main/include/Client/: GATTCImageReceiver.h  GATTCManager.h  GATTClient.h
main/include/Imager/: BLUART.h  DataBase.h  DataBlock.h
main/include/Server/: AdvertisingController.h  GATTCharacteristic.h  GATTCharacteristics.h  GATTSImageBroadcaster.h  GATTSManager.h  GATTSProfile.h  GATTService.h
main/include/Server/Characteristic/: GATTSCharacteristic.h
main/include/Utils/: CircularBuffer.hpp  DoubleBuffer.h
main/include/Utils/Pattern/Observer/: IObserver.h  ISubject.h
main/include/Utils/Pattern/Singleton/: Singleton.h
main/src/: GAP.cpp
main/src/Client/: GATTCImageReceiver.cpp  GATTClient.cpp
main/src/Imager/: BLUART.cpp
main/src/Server/: GATTCharacteristic.cpp  GATTCharacteristics.cpp  GATTSImageBroadcaster.cpp
